Fix hero alignment

--- a/hth/static/sass/styles.scss
+++ b/hth/static/sass/styles.scss
@@ -239,3 +239,8 @@
         text-align: left;
     }
 }
+
+.large-spacing {
+    margin-bottom: $large-spacing;
+    margin-top: $large-spacing;
+}
